clusters/kind-dev-misc-local/platform-services/envoy-gateway/smoke/smoke-gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: kubecrate-envoy-gateway
  labels:
    app.kubernetes.io/name: envoy-gateway
    app.kubernetes.io/part-of: kubecrate
    kubecrate.io/workload-category: platform-services
    kubecrate.io/smoke-test: envoy-gateway
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
